# lmstack

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_zh-TW.md  docker-compose.deploy.yml  docker-compose.full.yml  docker-compose.local.yml  docker-compose.worker.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  agent.py  api_keys.py  app_proxy.py  auth.py  auto_tuning.py  chat_proxy.py  containers.py  conversations.py  dashboard.py  deployments.py  gateway.py  headscale.py  huggingface.py  images.py  model_files.py  models.py  ollama.py  semantic_router.py  storage.py  system.py  workers.py
backend/app/api/apps/: __init__.py  utils.py  (+4 more)
backend/app/core/: api_key_utils.py  deps.py  exceptions.py
backend/app/models/: __init__.py  api_key.py  app.py  conversation.py  deployment.py  llm_model.py  registration_token.py  tuning.py  user.py  worker.py
backend/app/schemas/: __init__.py  api_key.py  app.py  conversation.py  dashboard.py  deployment.py  llm_model.py  model_files.py  tuning.py  user.py  worker.py
backend/app/services/: __init__.py  app_proxy_manager.py  app_sync.py  auth.py  bayesian_tuner.py  deployer.py  deployment_sync.py  gateway.py  headscale_manager.py  local_worker.py  semantic_router.py  tuning_agent.py  worker_sync.py
backend/migrations/: 001_move_backend_to_deployment.py  002_add_monthly_token_limit.py  003_add_conversations.py  004_add_apps.py  005_add_app_use_proxy.py  006_add_worker_tailscale.py  007_add_deployment_container_name.py  008_add_app_parent_id.py  009_add_tuning.py  010_add_conversation_log.py  011_add_worker_mac_support.py
backend/tests/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_deployments.py  test_health.py  test_workers.py
(+183 files in other folders)
